<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="mainActViewModel"
            type="com.jkweyu.quickqr.viewmodel.MainViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_08"
            android:layout_marginHorizontal="@dimen/dp_08"

            android:padding="@dimen/dp_06"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"

                android:maxLength="10"
                android:maxLines="1"

                android:textStyle="bold"

                android:text="@string/all_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="0dp"
            android:background="@color/all_fragment_line"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
            <ScrollView
                android:id="@+id/all_fragment_recyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clipToPadding="false"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/base_color"
                        android:layout_marginTop="@dimen/dp_08"
                        android:padding="@dimen/dp_14"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"


                            android:textSize="20sp"
                            android:background="@color/base_color"
                            android:text="@string/all_qr_type_text_title"
                            android:textStyle="bold" />
                        <com.jkweyu.quickqr.util.AllFragmentItemView
                            android:id="@+id/qr_type_text_history"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_all_text_favorites"
                            app:title="@string/all_qr_type_text_history_title"
                            app:count="@string/all_qr_type_text_history_hint"/>

                        <com.jkweyu.quickqr.util.AllFragmentItemView
                            android:id="@+id/qr_type_text_favorites"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_all_text_history"
                            app:title="@string/all_qr_type_text_favorites_title"
                            app:count="@string/all_qr_type_text_favorites_hint"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/base_color"
                        android:layout_marginTop="@dimen/dp_04"
                        android:padding="@dimen/dp_14"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"


                            android:textSize="20sp"
                            android:background="@color/base_color"
                            android:text="@string/all_qr_type_link_title"
                            android:textStyle="bold" />

                        <com.jkweyu.quickqr.util.AllFragmentItemView
                            android:id="@+id/qr_type_link_history"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_all_link_history"
                            app:title="@string/all_qr_type_link_history_title"
                            app:count="@string/all_qr_type_link_history_hint"/>


                        <com.jkweyu.quickqr.util.AllFragmentItemView
                            android:id="@+id/qr_type_link_favorites"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_all_link_favorites"
                            app:title="@string/all_qr_type_link_favorites_title"
                            app:count="@string/all_qr_type_link_favorites_hint"/>
                    </LinearLayout>


                </LinearLayout>


            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>