<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<data>
    <variable
        name="hViewModel"
        type="com.jkweyu.quickqr.viewmodel.MainViewModel" />
</data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/dp_08"
        android:layout_marginHorizontal="@dimen/dp_08"

        android:paddingHorizontal="@dimen/dp_06"
        android:paddingTop="@dimen/dp_06"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:textSize="28sp"

            android:maxLength="10"
            android:maxLines="1"

            android:textStyle="bold"

            android:text="@string/history_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/shape_tap_layout_background"
            android:elevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:tabIndicator="@drawable/shape_history_tab_layout_indicator"
            app:tabIndicatorAnimationDuration="0"
            app:tabIndicatorColor="#766DFF"
            app:tabIndicatorFullWidth="true"
            app:tabIndicatorHeight="4dp"
            app:tabRippleColor="@android:color/transparent"
            app:tabSelectedTextAppearance="@style/TabSelectedTextAppearance"
            app:tabSelectedTextColor="@color/selected_color"
            app:tabTextAppearance="@style/TabTextAppearance"
            app:tabTextColor="@color/unselected_color">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_tab_all_item" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_tab_text_item" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_tab_link_item" />


        </com.google.android.material.tabs.TabLayout>
        <!--
                    <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="일반" />
        -->


    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_marginHorizontal="@dimen/dp_08"
        android:id="@+id/FrameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"/>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>